--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deaf-learning-app",
-  "homepage": "https://HapyBeat.github.io/HapyBeat-Hackathon2025",
+  "homepage": "https://temda.github.io/HapyBeat-Hackathon2025",
   "private": true,
   "version": "0.0.0",
   "type": "module",
